# bee_reidentification

./: Makefile  README.md  environment.yml  pyproject.toml
bee-abdomen-reidentification/: __init__.py  data_provider.py  dataset.py  features.py  plots.py
bee-abdomen-reidentification/modeling/: predict.py  train.py
models/: evaluation.py  models.py  train_model.py  triplet_loss.py
notebooks/: model.eval.ipynb  prototyping.ipynb
