[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bee-abomden-reidentification"
version = "0.0.1"
description = "Reidentification of bees using their abdomen by applying metric learning."
authors = [
  { name = "Christopher Roth" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["bee-abomden-reidentification"]
force_sort_within_sections = true
